Proyecto1-comp2/src/main/java/Backend/antlr/pigLatinParser.java
// Generated from pigLatin.g4 by ANTLR 4.13.1
package Backend.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class pigLatinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_IMPORT=1, KW_NOVUS=2, KW_VARIABILES=3, KW_MUNERA=4, KW_MAIOR=5, FINIS_PROGRAMA=6, 
		FINIS_BLOQUE=7, KW_ESTO=8, KW_SERIES=9, KW_NUMERUS=10, KW_TEXTUM=11, KW_DECIMALIS=12, 
		KW_LITTERA=13, KW_BOOL=14, KW_VERUM=15, KW_FALSUS=16, KW_SI=17, KW_ALITER=18, 
		KW_DUM=19, KW_FACERE=20, KW_PER=21, KW_PERGE=22, KW_INTERRUMPE=23, KW_ACTIO=24, 
		KW_RATIO=25, KW_REDDERE=26, KW_NON=27, NOT=28, LE=29, GE=30, EQ=31, NEQ=32, 
		LT=33, GT=34, AND=35, OR=36, PLUS=37, MINUS=38, STAR=39, SLASH=40, MOD=41, 
		INC=42, DEC=43, SHIFT_OUT=44, SHIFT_IN=45, ASSIGN=46, DOT=47, COMMA=48, 
		SEMI=49, COLON=50, LPAREN=51, RPAREN=52, LBRACE=53, RBRACE=54, LBRACKET=55, 
		RBRACKET=56, DECIMALIS_LIT=57, NUMERUS_LIT=58, TEXTUM_LIT=59, LITTERA_LIT=60, 
		ID=61, LINE_COMMENT=62, BLOCK_COMMENT=63, WS=64;
	public static final int
		RULE_programa = 0, RULE_seccionImportaciones = 1, RULE_importacion = 2, 
		RULE_rutaImport = 3, RULE_seccionVariablesGlobales = 4, RULE_declaracionGlobal = 5, 
		RULE_seccionFunciones = 6, RULE_seccionPrincipal = 7, RULE_declaracionVariable = 8, 
		RULE_inicializadorVariable = 9, RULE_instanciacionObjeto = 10, RULE_valorBooleano = 11, 
		RULE_declaracionArreglo = 12, RULE_listaValoresArreglo = 13, RULE_elementoArreglo = 14, 
		RULE_literalStruct = 15, RULE_elementoStruct = 16, RULE_tipoPrimitivo = 17, 
		RULE_tipo = 18, RULE_definicionFuncion = 19, RULE_funcionSinRetorno = 20, 
		RULE_funcionConRetorno = 21, RULE_listaParametros = 22, RULE_parametro = 23, 
		RULE_seccionVariablesLocales = 24, RULE_declaracionLocal = 25, RULE_instruccion = 26, 
		RULE_asignacion = 27, RULE_destino = 28, RULE_accesoMiembro = 29, RULE_instruccionLlamadaMetodo = 30, 
		RULE_llamadaMetodo = 31, RULE_accesoPostfijo = 32, RULE_listaArgumentos = 33, 
		RULE_instruccionSi = 34, RULE_ramaAliterCondicional = 35, RULE_ramaAliterFinal = 36, 
		RULE_bloqueInstrucciones = 37, RULE_instruccionDum = 38, RULE_instruccionFacere = 39, 
		RULE_instruccionPer = 40, RULE_declaracionCicloFor = 41, RULE_actualizacionCiclo = 42, 
		RULE_instruccionInterrumpe = 43, RULE_instruccionPerge = 44, RULE_instruccionReddere = 45, 
		RULE_instruccionImprimir = 46, RULE_instruccionLeer = 47, RULE_instruccionIncrementoDecremento = 48, 
		RULE_expresion = 49, RULE_literal = 50;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccionImportaciones", "importacion", "rutaImport", "seccionVariablesGlobales", 
			"declaracionGlobal", "seccionFunciones", "seccionPrincipal", "declaracionVariable", 
			"inicializadorVariable", "instanciacionObjeto", "valorBooleano", "declaracionArreglo", 
			"listaValoresArreglo", "elementoArreglo", "literalStruct", "elementoStruct", 
			"tipoPrimitivo", "tipo", "definicionFuncion", "funcionSinRetorno", "funcionConRetorno", 
			"listaParametros", "parametro", "seccionVariablesLocales", "declaracionLocal", 
			"instruccion", "asignacion", "destino", "accesoMiembro", "instruccionLlamadaMetodo", 
			"llamadaMetodo", "accesoPostfijo", "listaArgumentos", "instruccionSi", 
			"ramaAliterCondicional", "ramaAliterFinal", "bloqueInstrucciones", "instruccionDum", 
			"instruccionFacere", "instruccionPer", "declaracionCicloFor", "actualizacionCiclo", 
			"instruccionInterrumpe", "instruccionPerge", "instruccionReddere", "instruccionImprimir", 
			"instruccionLeer", "instruccionIncrementoDecremento", "expresion", "literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'novus'", "'VARIABILES'", "'MUNERA'", "'MAIOR'", "'FINIS'", 
			"'finis'", "'esto'", "'series'", "'numerus'", "'textum'", "'decimalis'", 
			"'littera'", "'bool'", "'verum'", "'falsus'", "'si'", "'aliter'", "'dum'", 
			"'facere'", "'per'", "'perge'", "'interrumpe'", "'actio'", "'ratio'", 
			"'reddere'", "'non'", "'!'", "'<='", "'>='", "'=='", "'!='", "'<'", "'>'", 
			"'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'>>'", 
			"'<<'", "'='", "'.'", "','", "';'", "':'", "'('", "')'", "'{'", "'}'", 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_IMPORT", "KW_NOVUS", "KW_VARIABILES", "KW_MUNERA", "KW_MAIOR", 
			"FINIS_PROGRAMA", "FINIS_BLOQUE", "KW_ESTO", "KW_SERIES", "KW_NUMERUS", 
			"KW_TEXTUM", "KW_DECIMALIS", "KW_LITTERA", "KW_BOOL", "KW_VERUM", "KW_FALSUS", 
			"KW_SI", "KW_ALITER", "KW_DUM", "KW_FACERE", "KW_PER", "KW_PERGE", "KW_INTERRUMPE", 
			"KW_ACTIO", "KW_RATIO", "KW_REDDERE", "KW_NON", "NOT", "LE", "GE", "EQ", 
			"NEQ", "LT", "GT", "AND", "OR", "PLUS", "MINUS", "STAR", "SLASH", "MOD", 
			"INC", "DEC", "SHIFT_OUT", "SHIFT_IN", "ASSIGN", "DOT", "COMMA", "SEMI", 
			"COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
			"DECIMALIS_LIT", "NUMERUS_LIT", "TEXTUM_LIT", "LITTERA_LIT", "ID", "LINE_COMMENT", 
			"BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pigLatin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pigLatinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SeccionPrincipalContext seccionPrincipal() {
			return getRuleContext(SeccionPrincipalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(pigLatinParser.EOF, 0); }
		public SeccionImportacionesContext seccionImportaciones() {
			return getRuleContext(SeccionImportacionesContext.class,0);
		}
		public SeccionVariablesGlobalesContext seccionVariablesGlobales() {
			return getRuleContext(SeccionVariablesGlobalesContext.class,0);
		}
		public SeccionFuncionesContext seccionFunciones() {
			return getRuleContext(SeccionFuncionesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_IMPORT) {
				{
				setState(102);
				seccionImportaciones();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_VARIABILES) {
				{
				setState(105);
				seccionVariablesGlobales();
				}
			}

			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_MUNERA) {
				{
				setState(108);
				seccionFunciones();
				}
			}

			setState(111);
			seccionPrincipal();
			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionImportacionesContext extends ParserRuleContext {
		public List<ImportacionContext> importacion() {
			return getRuleContexts(ImportacionContext.class);
		}
		public ImportacionContext importacion(int i) {
			return getRuleContext(ImportacionContext.class,i);
		}
		public SeccionImportacionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionImportaciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterSeccionImportaciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitSeccionImportaciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitSeccionImportaciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionImportacionesContext seccionImportaciones() throws RecognitionException {
		SeccionImportacionesContext _localctx = new SeccionImportacionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccionImportaciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				importacion();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KW_IMPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportacionContext extends ParserRuleContext {
		public TerminalNode KW_IMPORT() { return getToken(pigLatinParser.KW_IMPORT, 0); }
		public RutaImportContext rutaImport() {
			return getRuleContext(RutaImportContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(pigLatinParser.SEMI, 0); }
		public ImportacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterImportacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitImportacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitImportacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportacionContext importacion() throws RecognitionException {
		ImportacionContext _localctx = new ImportacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(KW_IMPORT);
			setState(120);
			rutaImport();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(121);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RutaImportContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(pigLatinParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pigLatinParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(pigLatinParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(pigLatinParser.DOT, i);
		}
		public RutaImportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rutaImport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterRutaImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitRutaImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitRutaImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RutaImportContext rutaImport() throws RecognitionException {
		RutaImportContext _localctx = new RutaImportContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rutaImport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(ID);
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				match(DOT);
				setState(126);
				match(ID);
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DOT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionVariablesGlobalesContext extends ParserRuleContext {
		public TerminalNode KW_VARIABILES() { return getToken(pigLatinParser.KW_VARIABILES, 0); }
		public TerminalNode GT() { return getToken(pigLatinParser.GT, 0); }
		public List<DeclaracionGlobalContext> declaracionGlobal() {
			return getRuleContexts(DeclaracionGlobalContext.class);
		}
		public DeclaracionGlobalContext declaracionGlobal(int i) {
			return getRuleContext(DeclaracionGlobalContext.class,i);
		}
		public SeccionVariablesGlobalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionVariablesGlobales; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterSeccionVariablesGlobales(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitSeccionVariablesGlobales(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitSeccionVariablesGlobales(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionVariablesGlobalesContext seccionVariablesGlobales() throws RecognitionException {
		SeccionVariablesGlobalesContext _localctx = new SeccionVariablesGlobalesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_seccionVariablesGlobales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(KW_VARIABILES);
			setState(132);
			match(GT);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_ESTO || _la==KW_SERIES) {
				{
				{
				setState(133);
				declaracionGlobal();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionGlobalContext extends ParserRuleContext {
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public DeclaracionArregloContext declaracionArreglo() {
			return getRuleContext(DeclaracionArregloContext.class,0);
		}
		public DeclaracionGlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionGlobal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterDeclaracionGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitDeclaracionGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitDeclaracionGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionGlobalContext declaracionGlobal() throws RecognitionException {
		DeclaracionGlobalContext _localctx = new DeclaracionGlobalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracionGlobal);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_ESTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				declaracionVariable();
				}
				break;
			case KW_SERIES:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				declaracionArreglo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionFuncionesContext extends ParserRuleContext {
		public TerminalNode KW_MUNERA() { return getToken(pigLatinParser.KW_MUNERA, 0); }
		public TerminalNode GT() { return getToken(pigLatinParser.GT, 0); }
		public List<DefinicionFuncionContext> definicionFuncion() {
			return getRuleContexts(DefinicionFuncionContext.class);
		}
		public DefinicionFuncionContext definicionFuncion(int i) {
			return getRuleContext(DefinicionFuncionContext.class,i);
		}
		public SeccionFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).enterSeccionFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pigLatinListener ) ((pigLatinListener)listener).exitSeccionFunciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pigLatinVisitor ) return ((pigLatinVisitor<? extends T>)visitor).visitSeccionFunciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionFuncionesContext seccionFunciones() throws RecognitionException {
		SeccionFuncionesContext _localctx = new SeccionFuncionesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_seccionFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(KW_MUNERA);
			setState(144);
			match(GT);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_ACTIO || _la==KW_RATIO) {
				{
				{
				setState(145);
				definicionFuncion();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
